--- a/s1.html
+++ b/s1.html
@@ -13,7 +13,7 @@
 		<div style="background-color: #6495ED;width: 200px;height: 200px; position: relative; top: -180px; left: 800px;"></div>
 		<div style="background-color: #6A5ACD;width: 200px;height: 200px; position: relative; top: -380px; left: 1001px;"></div>
 
-		<div class="row quente">Cores Quentes</div>
+		<div class="row quente">Alterado no final</div>
 		<div style="background-color: #F00;width: 200px;height: 200px; position: relative; top: 20px; left: 599px;"></div>
 		<div style="background-color: #F50;width: 200px;height: 200px; position: relative; top: -180px; left: 800px;"></div>
 		<div style="background-color: #FF0;width: 200px;height: 200px; position: relative; top: -380px; left: 1001px;"></div>
